7th Commit 1Apr2024 @ 12:47PM

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,10 +35,12 @@
 					<br>
 				</div>
 
+				<label for="username"></label>
 				<input type="text" id="username" name="username" class="text-control"
-					autofocus="autofocus" placeholder="Username" />
+													 autofocus="autofocus" placeholder="Username" />
+				<label for="password"></label>
 				<input type="password" id="password" name="password" class="text-control"
-					placeholder="Password" />
+													 placeholder="Password" />
 
 				<p><a id="forgotPassword" href="/" th:href="@{/forgotPassword}">Forgot Password?</a></p>
 				<br>
